# p1

./: README.md
01-unidade/t02-graal/: author.md
01-unidade/t02-graal/include/: graal.h
01-unidade/t02-graal/tests/: main.cpp
01-unidade/t03-battleship-puzzle/: CMakeLists.txt  author.md
01-unidade/t03-battleship-puzzle/data/: DATA.md
01-unidade/t03-battleship-puzzle/src/: bpg.cpp  bpg.h  main.cpp  validated.cpp  validated.h
02-unidade/t04-sloc-project/: CMakeLists.txt  author.md
02-unidade/t04-sloc-project/src/: common.h  directory.cpp  directory.h  listing_file_content.cpp  listing_file_content.h  main.cpp  validated.cpp  validated.h
02-unidade/t05-vector/: README.md  author.md
02-unidade/t05-vector/source/: CMakeLists.txt  iterator_tests.cpp  vector.h  vector_tests.h
02-unidade/t06-hangman/: .gitignore  author.md
02-unidade/t06-hangman/source/: CMakeLists.txt
02-unidade/t06-hangman/source/core/: database.cpp  database.h  dice.h  hangman_common.cpp  hangman_common.h  hangman_gm.cpp  hangman_gm.h  hm_word.cpp  hm_word.h  main.cpp  player.cpp  player.h
02-unidade/t06-hangman/source/core/set/: words.csv
03-unidade/t07-jogo-da-vida/: CMakeLists.txt  author.md
03-unidade/t07-jogo-da-vida/config/: glife.ini
03-unidade/t07-jogo-da-vida/imgs/: readme.md
03-unidade/t07-jogo-da-vida/init/: ini_parser.h
03-unidade/t07-jogo-da-vida/lib/: canvas.cpp  canvas.h
03-unidade/t07-jogo-da-vida/src/: config.cpp  config.h  life.cpp  life.h  main.cpp
03-unidade/t08-snaze-game/: .gitignore  CMakeLists.txt  README.md  author.md  main.cpp
03-unidade/t08-snaze-game/config/: snaze.ini
03-unidade/t08-snaze-game/init/: config.cpp  config.h  ini_parser.cpp
03-unidade/t08-snaze-game/src/: Level.cpp  Level.h  Player.cpp  Player.h  Snake.cpp  Snake.h  SnazeGame.cpp  SnazeGame.h
